# biliFAV

./: .gitignore  AGENTS.md  CLI_USAGE.md  NOTICE  README.md  auto_complainer.py  biliFAV.py  config.toml.example  flowchart.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
.roo/commands/: cicd.md
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
