[project]
name = "bilifav"
version = "7.12.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.11.18",
    "ffmpeg==1.4",
    "ffmpeg-python==0.2.0",
    "httpx==0.28.1",
    "qrcode==8.2",
    "toml==0.10.2",
    "tqdm==4.67.1",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
]
